--- a/flask/pet_adoption_system/templates/base.html
+++ b/flask/pet_adoption_system/templates/base.html
@@ -6,31 +6,31 @@
     <title>Pet Adoption Application</title>
 </head>
 <body>
-    <h1>Pet Adoption App</h1>
-    <form action="/add" method="POST">
+    <h1 style="color: darkslategray; text-align: center;">Pet Adoption App</h1>
+    <form style="background-color: #f4f4f4; padding: 20px; border-radius: 10px; width: 300px;" action="/add" method="POST">
         <div>
             <label for="name">Pet name</label>
-            <input type="text" name="name" placeholder="Enter name of the pet">
+            <input type="text" name="name" placeholder="Enter name of the pet" style="padding: 8px; border-radius: 5px; border: none;">
             <br><br>
             <label for="species">Species</label>
-            <input type="text" name="species" placeholder="Dog: Golden Retriever">
+            <input type="text" name="species" placeholder="Dog: Golden Retriever" style="padding: 8px; border-radius: 5px; border: none;">
             <br><br>
             <label for="age">Age</label>
-            <input type="text" name="age" placeholder="Enter age of the pet(in yrs)">
+            <input type="text" name="age" placeholder="Enter age of the pet(in yrs)" style="padding: 8px; border-radius: 5px; border: none;">
             <br><br>
 
-            <button type="submit">Add</button>
+            <button style="background-color: green; color: white; padding: 10px 20px; border: none; border-radius:8px; cursor: pointer;" type="submit">Add</button>
         </div>
     </form>
 
     {% for pet in pet_list %}
         <br>
         <li>
-            <strong>{{ pet.name }}</strong> ({{ pet.species }}, Age: {{ pet.age }})
+            <strong>{{ pet.name }}</strong>  ({{ pet.species }}, Age: {{ pet.age }})
         </li>
         <br>
 
-        <a href="{{url_for('edit',pet_id=pet.id)}}">Edit</a>
+        <a style="padding: 10px 20px" href="{{url_for('edit',pet_id=pet.id)}}">Edit</a>
         <a href="/delete/{{pet.id}}">Delete</a>
         <br>
     {% endfor %}
