--- a/flask/pet_adoption_system/templates/base.html
+++ b/flask/pet_adoption_system/templates/base.html
@@ -30,8 +30,8 @@
         </li>
         <br>
 
-        <a style="padding: 10px 20px" href="{{url_for('edit',pet_id=pet.id)}}">Edit</a>
-        <a href="/delete/{{pet.id}}">Delete</a>
+        <a style="padding: 10px 20px; text-decoration: none; color: darkblue;" href="{{url_for('edit',pet_id=pet.id)}}">Edit</a>
+        <a style="text-decoration: none; color: red;" href="/delete/{{pet.id}}">Delete</a>
         <br>
     {% endfor %}
 </body>
