--- a/flask/pet_adoption_system/templates/edit_pet.html
+++ b/flask/pet_adoption_system/templates/edit_pet.html
@@ -1,7 +1,12 @@
-<h1>Edit your pet details: </h1>
-<form action="{{ url_for('update', pet_id=pet.id) }}" method="POST">
+<h2 style="color: darkslategray; text-align: center;">Edit your pet details: </h2>
+<form style="background-color: #f4f4f4; padding: 20px; border-radius: 10px; width: 300px;" action="{{ url_for('update', pet_id=pet.id) }}" method="POST">
+    <label for="name">Pet name</label>
     <input type="text" name="name" value="{{ pet.name }}" required>
+    <br><br>
+    <label for="species">Species</label>
     <input type="text" name="species" value="{{ pet.species }}" required>
-    <input type="number" name="age" value="{{ pet.age }}" required>
-    <button type="submit">Update Pet</button>
+    <br><br>
+    <label for="age">Age</label>
+    <input type="number" name="age" value="{{ pet.age }}" required><br><br>
+    <button style="background-color: green; color: white; padding: 10px 20px; border: none; border-radius:8px; cursor: pointer;" type="submit">Update Pet</button>
 </form>
